[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myhelper"
version = "0.1.0-alpha"
description = "Code Snippets that I regularly use_."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.6"
license = {text = "UNLICENSE"}
authors = [
    { name = "Prince Kumar", email = "prince736804545@gmail.com" }
]
maintainers = [
    { name = "Prince Kumar", email = "prince736804545@gmail.com" }
] 
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Unlicense",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules"
    "Operating System :: OS Independent",
]
keywords = ["sample", "example", "mypackage"]
dependencies = [
    "aiohttp",
    "yt-dlp"
]

[project.optional-dependencies]
dev = [

]

[project.urls]
"Homepage" = "https://github.com/pk-628996/myhelper"
"Documentation" = "https://github.com/pk-628996/myhelper/wiki"
"Issue Tracker" = "https://github.com/pk-628996/myhelper/issues"
"Source Code" = "https://github.com/pk-628996/myhelper"

[project.scripts]
myhelper = "myhelper.cli:main"

[tool.setuptools.packages.find]
where = ["myhelper"]
exclude = ["tests*"]
