[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myhelper"
[tool.setuptools]
name = "myhelper"
version = "0.1.6-alpha"
description = "Code Snippets that I regularly use."
long_description = "README.md"
license = "UNLICENSE"
author = "Prince Kumar"
author_email = "prince736804545@gmail.com"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]
keywords = ["myhelper", "yt-dlp helper", "mypackage"]
python_requires = ">=3.6"
install_requires = [
    "aiohttp",
    "yt-dlp"
]

[tool.setuptools.scripts]
myhelper = "myhelper.cli:main"

[tool.setuptools.packages.find]
where = ["myhelper"]

[tool.setuptools.urls]
homepage = "https://github.com/pk-628996/myhelper"
documentation = "https://github.com/pk-628996/myhelper/wiki"
repository = "https://github.com/pk-628996/myhelper"
changelog = "https://github.com/pk-628996/myhelper/blob/master/CHANGELOG.md"
"Issue Tracker" = "https://github.com/pk-628996/myhelper/issues"

[tool.setuptools.metadata]
authors = [
    { name = "Prince Kumar", email = "prince736804545@gmail.com" }
]
maintainers = [
    { name = "Prince Kumar", email = "prince736804545@gmail.com" }
]
